# bad-apple-htmx-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.local.yml  docker-compose.production.yml  main.py  pyproject.toml
static/: htmx.js  server-commands.js
templates/: index.html
