[project]
name = "bad-apple-htmx-demo"
version = "0.1.0"
description = "Bad Apple ASCII animation using htmx server-commands extension"
authors = [
    { name = "Christian Tanul", email = "contact@christiantanul.com" },
]
requires-python = "==3.12.*"
readme = "README.md"

dependencies = [
    "fastapi[standard]==0.116.1",            # https://github.com/tiangolo/fastapi
]
